work on more css

--- a/style.css
+++ b/style.css
@@ -27,3 +27,6 @@ font-family: 'Oswald','Lato', sans-serif;
 font-family: 'Droid Serif','PT Serif', serif;
     color:#c6f;
 }
+
+
+/* write more css */
