Changed theme author name

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: ISMA309
-Author: Morten Rand-Hendriksen et.al.
+Author: Min Young Lee
 Description: Repo version of ISMA309 Child Theme
 Version: 0.0.1
 Template: simone
