content-review-old added

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ Version: 0.0.2
 Template: simone
 */
 
-@import url('../simone/style.css');
+/*@import url('../simone/style.css');
 
 /* =Theme customization starts here
 -------------------------------------------------------------- */
